# nicetheme

./: .gitignore  README.md  pyproject.toml  run.py  run.sh  test_api.py
nicetheme/: __init__.py  nt.py
nicetheme/assets/: components.css  global_overrides.css  icons.css  sliders.css
nicetheme/components/: __init__.py
nicetheme/components/atoms/: __init__.py  button.py  dangerous_button.py  icon.py  select.py  slider.py  tab.py  toggle.py
nicetheme/components/molecules/: __init__.py  header.py  histogram.py  theme_config.py
nicetheme/components/organisms/: __init__.py  terminal.py
nicetheme/core/: __init__.py  bridge.py  manager.py  registry.py  themes.py
nicetheme/themes/: default.yaml  material_you.yaml  metro.yaml  solarized paper.yaml  solarized.yaml  solarized_glossy.yaml
nicetheme/themes/layouts/: material.yaml  metro.yaml  paper.yaml  relaxed.yaml
nicetheme/themes/palettes/: material.yaml  metro.yaml  solarized.yaml  tailwind.yaml
nicetheme/themes/presets/: default.yaml  material_you.yaml  metro.yaml  solarized paper.yaml  solarized.yaml  solarized_dark.yaml  solarized_glossy.yaml  solarized_light.yaml  solarized_paper.yaml
nicetheme/themes/textures/: flat.yaml  frosted_glass.yaml  glossy.yaml  liquid_glass.yaml  material.yaml
test/: test.py
