[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicetheme"
version = "0.1.0"
description = "A powerful theming engine for NiceGUI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "nicegui>=1.4.0",
    "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/nicetheme"
Repository = "https://github.com/yourusername/nicetheme"

[tool.setuptools.packages.find]
where = ["."]
include = ["nicetheme*"]
